--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.debug.settings.forceBuildBeforeLaunch": false,
-    "java.debug.settings.console": "internalConsole"
+    "java.debug.settings.console": "internalConsole",
+    "liveshare.allowGuestDebugControl": true,
+    "liveshare.languages.allowGuestCommandControl": true,
+    "liveshare.notebooks.allowGuestExecuteCells": true
   }
   
