--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,20 @@
             "type": "java",
             "name": "Launch MovementPatterns",
             "request": "launch",
+            "mainClass": "TDT4100_project/project.Movement.MovementPatterns",
+            "projectName": "tdt4100_v2022_prosjekt_boilerplate"
+        },
+        {
+            "type": "java",
+            "name": "Launch ChessApp",
+            "request": "launch",
+            "mainClass": "TDT4100_project/project.ChessApp",
+            "projectName": "tdt4100_v2022_prosjekt_boilerplate"
+        },
+        {
+            "type": "java",
+            "name": "Launch MovementPatterns",
+            "request": "launch",
             "mainClass": "TDT4100_project/project.MovementPatterns",
             "projectName": "tdt4100_v2022_prosjekt_boilerplate"
         },
