--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.debug.settings.forceBuildBeforeLaunch": false,
-    "java.debug.settings.console": "internalConsole",
+    "java.debug.settings.console": "integratedTerminal",
     "liveshare.languages.allowGuestCommandControl": true,
     "liveshare.notebooks.allowGuestExecuteCells": true
   }
