Fixed problem with pom encoding

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <packaging>jar</packaging>
  
     <name>tdt4100_v2022_prosjekt_boilerplate</name>
+
+	<properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
 	
 
    <dependencies>
